<resources>
    <string name="title">Wordle</string>

    <!--LandingActivity-->
    <string name="start_button">Start Game</string>
    <string name="help_button">Help</string>
    <string name="back_button">Go Back</string>

    <!--HelpActivity -->
    <string name="help_title">Help</string>
    <string name="how_to_play">
        You have six (6) guesses to guess the word. Each guess must be a valid five (5) letter word. You submit your guess pressing the enter button on your keyboard. After each attempt, the colour of the boxes will change to show you how close you are to the correct answer.
    </string>
    <string name="examples">Examples</string>
    <string name="example_first">The letter "W" is in the word and in the right position.</string>
    <string name="example_second">The letter "I" is in the word, but in the wrong position.</string>
    <string name="example_third">There is no letter "U" in the word.</string>

    <!--GameActivity-->
    <string name="restart_button_description">Restart Button</string>
    <string name="help_button_description">Help Button</string>
    <string name="scores">Scores</string>
    <string name="input_error">Invalid input</string>

    <!--ScoreActivity-->
    <string name="new_game_button">New Game</string>
    <string name="quit_button">Quit</string>
    <string name="game_hint">Guess a word</string>
    <string name="guess_button">Guess</string>

    <!--Keyboard-->
    <string name="q">Q</string>
    <string name="w">W</string>
    <string name="e">E</string>
    <string name="r">R</string>
    <string name="t">T</string>
    <string name="y">Y</string>
    <string name="u">U</string>
    <string name="i">I</string>
    <string name="o">O</string>
    <string name="p">P</string>
    <string name="a">A</string>
    <string name="s">S</string>
    <string name="d">D</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="z">Z</string>
    <string name="x">X</string>
    <string name="c">C</string>
    <string name="v">V</string>
    <string name="b">B</string>
    <string name="n">N</string>
    <string name="m">M</string>

</resources>