<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HelpActivity"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:fontFamily="@font/spartan"
            android:text="@string/help_title"
            android:textSize="32sp"
            android:textColor="@color/secondary"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:padding="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/spartan"
                android:text="@string/how_to_play"
                android:textSize="16sp"
                android:textAlignment="center"/>
        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="50dp"
            app:dividerThickness="2dp"
            app:dividerColor="@color/secondary"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/spartan"
                android:text="@string/examples"
                android:textSize="18sp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/weary"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/spartan"
                android:text="@string/example_first"
                android:textSize="14sp"
                android:textAlignment="center"  />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/pills"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/spartan"
                android:text="@string/example_second"
                android:textSize="14sp"
                android:textAlignment="center"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/vague"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/spartan"
                android:text="@string/example_third"
                android:textSize="14sp"
                android:textAlignment="center"/>

        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="50dp"
            app:dividerThickness="2dp"
            app:dividerColor="@color/secondary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/back_button"
            style="@style/Widget.Material3.Button.IconButton.Filled"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/spartan"
            android:textSize="24sp"
            android:textAllCaps="true"
            android:text="@string/back_button"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>