<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".LandingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-100dp"
            android:layout_marginBottom="200dp"
            android:src="@mipmap/icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="150dp"
            android:fontFamily="@font/spartan"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="48sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/start_button"
                style="@style/Widget.Material3.Button.IconButton.Filled"
                android:layout_width="300dp"
                android:layout_height="80dp"
                android:backgroundTint="@color/primary"
                android:fontFamily="@font/spartan"
                android:text="@string/start_button"
                android:textSize="32sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/help_button"
                style="@style/Widget.Material3.Button.IconButton.Filled"
                android:layout_width="300dp"
                android:layout_height="80dp"
                android:layout_marginTop="50dp"
                android:backgroundTint="@color/primary"
                android:fontFamily="@font/spartan"
                android:text="@string/help_button"
                android:textSize="32sp" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>